# ncs-arducam-mega-driver

./: CMakeLists.txt  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
modules/arducam_mega/: CMakeLists.txt  Kconfig
modules/arducam_mega/dts/bindings/: arducam,mega.yaml
modules/arducam_mega/include/arducam_mega/: ArducamCamera.h  NordicHal.h  Platform.h  arducam_mega.h  arducam_nordic_hal.h
modules/arducam_mega/lib/: CMakeLists.txt  Kconfig
modules/arducam_mega/lib/arducam_mega/: ArducamCamera.c  CMakeLists.txt  Kconfig  arducam_mega.c  arducam_nordic_hal.c
modules/arducam_mega/zephyr/: module.yml
samples/mass_img_capture/: CMakeLists.txt  prj.conf  sample.yaml
samples/mass_img_capture/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
samples/mass_img_capture/src/: main.c
samples/take_picture/: CMakeLists.txt
src/: main.c
